# monteCarlo

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  LABELING_IMPROVEMENTS.md  LISTPLOTS_IMPLEMENTATION.md  PHYSICS_SIMULATIONS.md  README.md  demo_physics.py  pyproject.toml
src/monteCarlo/classes/: argParse.py  optSwitches.py
src/monteCarlo/commands/: cmdSwitchbord.py  commands.json  dataStore.py  fetchData.py  listPlots.py  listSims.py  listSources.py  newCmd.py  plotResults.py  runSim.py  setCorrelation.py  setupSim.py
src/monteCarlo/defs/: dataFetcher.py  dataSources.py  logIt.py  monteCarloEngine.py  newsDataFetcher.py  visualizer.py
